<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green_main"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/welcome_back" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/user" />

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@drawable/cardviewshape"
            android:layout_marginTop="30dp"
            android:paddingTop="40dp"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:background="@drawable/inputfield"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="17sp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/username"
                />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:background="@drawable/inputfield"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:textSize="17sp"
                android:padding="12dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custombutton"
                android:foreground="?attr/selectableItemBackground"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <TextView
                android:id="@+id/textView3"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password" />
        </LinearLayout>
</LinearLayout>